--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,19 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      - run: 
-          name: cc-test-reporter
+      - run:
+          name: Deploy Master to Heroku
           command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-      - run: echo test succeed!
-            
+            git push https://git.heroku.com/ci-cd-test-24601.git master
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
+              
