--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install-npm-tools
-          command: sudo npm install -g grunt-cli mocha nyc
+          command: sudo npm install -g grunt-cli mocha nyc electron --unsafe-perm=true --allow-root
       - run:
           name: install-new-modules
           command: sudo npm install
