--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs: # a collection of steps
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install-npm-tools
-          command: sudo npm install -g grunt-cli mocha nyc electron --unsafe-perm=true --allow-root
-      - run:
-          name: install-new-modules
-          command: sudo npm install
+          command: sudo npm install -g grunt-cli mocha nyc
+      #- run:
+          #name: install-new-modules
+          #command: sudo npm install
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
